test/syc/bad/incomret.c
/*
 * Function returns incomplete type
 */

struct foo f(void)
{
}
